6.2/api/Classes/index_classes.md
---
title: Classes

---

# Classes




* **class [BarGraph](../Classes/classBarGraph.md)** 
* **class [ColorScheme](../Classes/classColorScheme.md)** 
    * **struct [rgb](../Classes/structColorScheme_1_1rgb.md)** 
* **class [ColorSchemes](../Classes/classColorSchemes.md)** 
* **class [CustomSurfaceReconstructionFilter](../Classes/classCustomSurfaceReconstructionFilter.md)** 
* **class [FEAreaCoverage](../Classes/classFEAreaCoverage.md)** 
    * **class [Surface](../Classes/classFEAreaCoverage_1_1Surface.md)** 
* **class [FEAutoMesher](../Classes/classFEAutoMesher.md)** 
* **class [FECVDDecimationModifier](../Classes/classFECVDDecimationModifier.md)** 
    * **class [Cluster](../Classes/classFECVDDecimationModifier_1_1Cluster.md)** 
    * **struct [EDGE](../Classes/structFECVDDecimationModifier_1_1EDGE.md)** 
    * **class [NODE](../Classes/classFECVDDecimationModifier_1_1NODE.md)** 
* **class [FECoreMesh](../Classes/classFECoreMesh.md)** 
* **class [FEEdge](../Classes/classFEEdge.md)** 
* **class [FEElement](../Classes/classFEElement.md)** 
* **class [FEElementData](../Classes/classFEElementData.md)** 
* **class [FEElement_](../Classes/classFEElement__.md)** 
* **class [FEFace](../Classes/classFEFace.md)** 
* **class [FEFillHole](../Classes/classFEFillHole.md)** 
    * **class [EdgeRing](../Classes/classFEFillHole_1_1EdgeRing.md)** 
    * **struct [FACE](../Classes/structFEFillHole_1_1FACE.md)** 
* **class [FEFixMesh](../Classes/classFEFixMesh.md)** 
* **class [FEItem](../Classes/classFEItem.md)** 
* **class [FEMesh](../Classes/classFEMesh.md)** 
* **class [FEMeshSmoothingModifier](../Classes/classFEMeshSmoothingModifier.md)** 
* **class [FENode](../Classes/classFENode.md)** 
* **class [FENodeElementList](../Classes/classFENodeElementList.md)** 
* **class [FENodeFaceList](../Classes/classFENodeFaceList.md)** 
* **class [FENodeNodeList](../Classes/classFENodeNodeList.md)** 
* **class [FETri3](../Classes/classFETri3.md)** 
* **class [FEVTKExport](../Classes/classFEVTKExport.md)** 
* **class [FEVTKimport](../Classes/classFEVTKimport.md)** 
* **class [GLCOLOR](../Classes/classGLCOLOR.md)** 
* **class [InputParams](../Classes/classInputParams.md)** 
* **struct [Intersection](../Classes/structIntersection.md)** 
* **class [LegacyMeshGenerator](../Classes/classLegacyMeshGenerator.md)** 
* **class [MeshSettings](../Classes/classMeshSettings.md)** <br>Settings for creating a mesh. 
* **class [OptimizeParameterFile](../Classes/classOptimizeParameterFile.md)** 
* **class [ParticleEvent:: Parent](../Classes/classParticleEvent_1_1_01Parent.md)** 
* **class [ParticleShapeStatistics](../Classes/classParticleShapeStatistics.md)** 
* **class [Preferences](../Classes/classPreferences.md)** <br>Application preferences. 
* **class [PreferencesWindow](../Classes/classPreferencesWindow.md)** <br>Qt UI dialog to control preferences. 
* **class [Procrustes3D](../Classes/classProcrustes3D.md)** 
* **struct [Quad](../Classes/structQuad.md)** 
* **struct [Ray](../Classes/structRay.md)** 
* **class [Reconstruction](../Classes/classReconstruction.md)** 
* **struct [SimilarityTransform3D](../Classes/structSimilarityTransform3D.md)** 
* **class [SurfaceReconstructor](../Classes/classSurfaceReconstructor.md)** 
* **struct [Triangle](../Classes/structTriangle.md)** 
* **class [Utils](../Classes/classUtils.md)** 
* **struct [VTKEXPORT](../Classes/structVTKEXPORT.md)** 
* **class [Vis](../Classes/classVis.md)** 
* **namespace [itk](../Namespaces/namespaceitk.md)** 
    * **class [AdvancedTransform](../Classes/classitk_1_1AdvancedTransform.md)** <br>Transform maps points, vectors and covariant vectors from an input space to an output space. 
    * **class [BSplineInterpolateImageFunctionWithDoubleCoefficents](../Classes/classitk_1_1BSplineInterpolateImageFunctionWithDoubleCoefficents.md)** 
    * **class [CompactlySupportedRBFSparseKernelTransform](../Classes/classitk_1_1CompactlySupportedRBFSparseKernelTransform.md)** 
    * **class [Constraint](../Classes/classitk_1_1Constraint.md)** 
    * **class [Constraints](../Classes/classitk_1_1Constraints.md)** 
    * **class [ContourDomain](../Classes/classitk_1_1ContourDomain.md)** 
    * **class [FreeFormConstraint](../Classes/classitk_1_1FreeFormConstraint.md)** 
    * **namespace [Functor](../Namespaces/namespaceitk_1_1Functor.md)** 
        * **class [MultiplyByConstant](../Classes/classitk_1_1Functor_1_1MultiplyByConstant.md)** 
    * **class [ImageToVTKImageFilter](../Classes/classitk_1_1ImageToVTKImageFilter.md)** <br>Converts an ITK image into a VTK image and plugs a itk data pipeline to a VTK datapipeline. 
    * **class [KernelTransform2](../Classes/classitk_1_1KernelTransform2.md)** 
    * **class [MeshDomain](../Classes/classitk_1_1MeshDomain.md)** 
    * **class [MultiplyByConstantImageFilter](../Classes/classitk_1_1MultiplyByConstantImageFilter.md)** <br>Multiply input pixels by a constant. 
    * **class [ParticleAttribute](../Classes/classitk_1_1ParticleAttribute.md)** 
        * **struct [DefinedCallbacksStruct](../Classes/structitk_1_1ParticleAttribute_1_1DefinedCallbacksStruct.md)** 
    * **class [ParticleConstrainedModifiedCotangentEntropyGradientFunction](../Classes/classitk_1_1ParticleConstrainedModifiedCotangentEntropyGradientFunction.md)** 
    * **class [ParticleContainer](../Classes/classitk_1_1ParticleContainer.md)** 
    * **class [ParticleContainerArrayAttribute](../Classes/classitk_1_1ParticleContainerArrayAttribute.md)** 
    * **class [ParticleCurvatureEntropyGradientFunction](../Classes/classitk_1_1ParticleCurvatureEntropyGradientFunction.md)** 
    * **class [ParticleDomain](../Classes/classitk_1_1ParticleDomain.md)** 
    * **class [ParticleDualVectorFunction](../Classes/classitk_1_1ParticleDualVectorFunction.md)** 
    * **class [ParticleEnsembleEntropyFunction](../Classes/classitk_1_1ParticleEnsembleEntropyFunction.md)** 
    * **class [ParticleEntropyGradientFunction](../Classes/classitk_1_1ParticleEntropyGradientFunction.md)** <br>This function returns an estimate of the gradient of the entropy of a particle distribution with respect to change in position of a specific particle in that distribution. 
    * **class [ParticleEvent](../Classes/classitk_1_1ParticleEvent.md)** 
    * **class [ParticleEventWithIndex](../Classes/classitk_1_1ParticleEventWithIndex.md)** 
    * **class [ParticleGaussianModeWriter](../Classes/classitk_1_1ParticleGaussianModeWriter.md)** 
    * **class [ParticleGeneralShapeGradientMatrix](../Classes/classitk_1_1ParticleGeneralShapeGradientMatrix.md)** <br>Each column describes a shape. A shape may be composed of m_DomainsPerShape domains (default 1). ALL DOMAINS ARE _NOT_ ASSUMED TO HAVE THE SAME NUMBER OF PARTICLES! 
    * **class [ParticleGeneralShapeMatrix](../Classes/classitk_1_1ParticleGeneralShapeMatrix.md)** <br>Each column describes a shape. A shape may be composed of m_DomainsPerShape domains (default 1). ALL DOMAINS ARE _NOT_ ASSUMED TO HAVE THE SAME NUMBER OF PARTICLES! 
    * **class [ParticleGoodBadAssessment](../Classes/classitk_1_1ParticleGoodBadAssessment.md)** 
        * **struct [IdxCompare](../Classes/structitk_1_1ParticleGoodBadAssessment_1_1IdxCompare.md)** 
    * **class [ParticleGradientDescentPositionOptimizer](../Classes/classitk_1_1ParticleGradientDescentPositionOptimizer.md)** 
    * **class [ParticleImageDomain](../Classes/classitk_1_1ParticleImageDomain.md)** 
    * **class [ParticleImageDomainWithCurvature](../Classes/classitk_1_1ParticleImageDomainWithCurvature.md)** 
    * **class [ParticleImageDomainWithGradN](../Classes/classitk_1_1ParticleImageDomainWithGradN.md)** 
    * **class [ParticleImageDomainWithGradients](../Classes/classitk_1_1ParticleImageDomainWithGradients.md)** 
    * **class [ParticleImplicitSurfaceDomain](../Classes/classitk_1_1ParticleImplicitSurfaceDomain.md)** 
    * **class [ParticleMeanCurvatureAttribute](../Classes/classitk_1_1ParticleMeanCurvatureAttribute.md)** 
    * **class [ParticleMeshBasedGeneralEntropyGradientFunction](../Classes/classitk_1_1ParticleMeshBasedGeneralEntropyGradientFunction.md)** 
    * **class [ParticleModifiedCotangentEntropyGradientFunction](../Classes/classitk_1_1ParticleModifiedCotangentEntropyGradientFunction.md)** 
    * **class [ParticleNeighborhood](../Classes/classitk_1_1ParticleNeighborhood.md)** 
    * **class [ParticleOmegaGradientFunction](../Classes/classitk_1_1ParticleOmegaGradientFunction.md)** 
    * **struct [ParticlePointIndexPair](../Classes/structitk_1_1ParticlePointIndexPair.md)** 
    * **class [ParticlePositionReader](../Classes/classitk_1_1ParticlePositionReader.md)** 
    * **class [ParticlePositionWriter](../Classes/classitk_1_1ParticlePositionWriter.md)** 
    * **class [ParticleProcrustesRegistration](../Classes/classitk_1_1ParticleProcrustesRegistration.md)** <br>Class for replacing bad particles during optimization Author - Praful Agrawal Date - June 05, 2017. 
    * **class [ParticleRegionDomain](../Classes/classitk_1_1ParticleRegionDomain.md)** 
    * **class [ParticleRegionNeighborhood](../Classes/classitk_1_1ParticleRegionNeighborhood.md)** 
        * **struct [IteratorNodePair](../Classes/structitk_1_1ParticleRegionNeighborhood_1_1IteratorNodePair.md)** 
    * **class [ParticleShapeLinearRegressionMatrixAttribute](../Classes/classitk_1_1ParticleShapeLinearRegressionMatrixAttribute.md)** 
    * **class [ParticleShapeMatrixAttribute](../Classes/classitk_1_1ParticleShapeMatrixAttribute.md)** <br>Each column describes a shape. A shape may be composed of m_DomainsPerShape domains (default 1). ALL DOMAINS ARE _NOT_ ASSUMED TO HAVE THE SAME NUMBER OF PARTICLES! 
    * **class [ParticleShapeMixedEffectsMatrixAttribute](../Classes/classitk_1_1ParticleShapeMixedEffectsMatrixAttribute.md)** 
    * **class [ParticleSurfaceNeighborhood](../Classes/classitk_1_1ParticleSurfaceNeighborhood.md)** 
    * **class [ParticleSystem](../Classes/classitk_1_1ParticleSystem.md)** <br>A facade class managing interactions with a particle system. 
    * **class [ParticleVectorFunction](../Classes/classitk_1_1ParticleVectorFunction.md)** 
    * **class [PlaneConstraint](../Classes/classitk_1_1PlaneConstraint.md)** 
    * **class [PowerOfTwoPointTree](../Classes/classitk_1_1PowerOfTwoPointTree.md)** 
    * **class [PowerOfTwoPointTreeNode](../Classes/classitk_1_1PowerOfTwoPointTreeNode.md)** 
    * **class [SparseKernelTransform](../Classes/classitk_1_1SparseKernelTransform.md)** 
    * **class [SphereConstraint](../Classes/classitk_1_1SphereConstraint.md)** 
    * **class [TPGACLevelSetImageFilter](../Classes/classitk_1_1TPGACLevelSetImageFilter.md)** 
    * **class [ThinPlateSplineKernelTransform2](../Classes/classitk_1_1ThinPlateSplineKernelTransform2.md)** 
    * **struct [powstruct](../Classes/structitk_1_1powstruct.md)** 
    * **struct [powstruct< a, 0 >](../Classes/structitk_1_1powstruct_3_01a_00_010_01_4.md)** 
* **class [mat3d](../Classes/classmat3d.md)** 
* **class [matrix](../Classes/classmatrix.md)** 
* **class [meshFIM](../Classes/classmeshFIM.md)** 
* **class [object_reader](../Classes/classobject__reader.md)** 
* **class [object_writer](../Classes/classobject__writer.md)** 
* **class [quatd](../Classes/classquatd.md)** 
* **namespace [shapeworks](../Namespaces/namespaceshapeworks.md)** 
    * **class [AnalysisTool](../Classes/classshapeworks_1_1AnalysisTool.md)** 
    * **class [Command](../Classes/classshapeworks_1_1Command.md)** 
    * **class [DeepSSMJob](../Classes/classshapeworks_1_1DeepSSMJob.md)** <br>Qt Wrapper for DeepSSM. 
    * **class [DeepSSMParameters](../Classes/classshapeworks_1_1DeepSSMParameters.md)** 
    * **class [DeepSSMTool](../Classes/classshapeworks_1_1DeepSSMTool.md)** 
    * **class [Executable](../Classes/classshapeworks_1_1Executable.md)** 
    * **class [Groom](../Classes/classshapeworks_1_1Groom.md)** <br>High level groom API. 
    * **class [GroomCommandGroup](../Classes/classshapeworks_1_1GroomCommandGroup.md)** 
    * **class [GroomParameters](../Classes/classshapeworks_1_1GroomParameters.md)** 
    * **class [GroomTool](../Classes/classshapeworks_1_1GroomTool.md)** 
    * **class [GroupPvalueJob](../Classes/classshapeworks_1_1GroupPvalueJob.md)** 
    * **class [Image](../Classes/classshapeworks_1_1Image.md)** 
    * **class [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md)** 
    * **class [ImageUtils](../Classes/classshapeworks_1_1ImageUtils.md)** <br>Helper functions for image. 
    * **class [IndexRegion](../Classes/classshapeworks_1_1IndexRegion.md)** <br>Indices into a 3d region of memory (can be negative, e.g., for the purpose of padding an image) 
    * **class [Job](../Classes/classshapeworks_1_1Job.md)** 
    * **class [KeyboardShortcuts](../Classes/classshapeworks_1_1KeyboardShortcuts.md)** 
    * **class [Lightbox](../Classes/classshapeworks_1_1Lightbox.md)** <br>Display multiple Viewers in a tiled display. 
    * **class [LogWindow](../Classes/classshapeworks_1_1LogWindow.md)** <br>Log Window. 
    * **class [MatrixContainer](../Classes/classshapeworks_1_1MatrixContainer.md)** 
    * **class [Mesh](../Classes/classshapeworks_1_1Mesh.md)** 
    * **class [MeshCache](../Classes/classshapeworks_1_1MeshCache.md)** 
    * **class [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md)** 
    * **class [MeshGenerator](../Classes/classshapeworks_1_1MeshGenerator.md)** 
    * **struct [MeshGeoEntry](../Classes/structshapeworks_1_1MeshGeoEntry.md)** 
    * **class [MeshGroup](../Classes/classshapeworks_1_1MeshGroup.md)** <br>Representation of a group of meshes. 
    * **class [MeshManager](../Classes/classshapeworks_1_1MeshManager.md)** 
    * **class [MeshReconstructors](../Classes/classshapeworks_1_1MeshReconstructors.md)** 
    * **class [MeshUtils](../Classes/classshapeworks_1_1MeshUtils.md)** 
    * **class [MeshWarper](../Classes/classshapeworks_1_1MeshWarper.md)** 
    * **class [MeshWorkItem](../Classes/classshapeworks_1_1MeshWorkItem.md)** 
    * **class [MeshWorkQueue](../Classes/classshapeworks_1_1MeshWorkQueue.md)** 
    * **class [MeshWorker](../Classes/classshapeworks_1_1MeshWorker.md)** 
    * **class [MeshWrapper](../Classes/classshapeworks_1_1MeshWrapper.md)** 
    * **struct [MultiVariateNormalRandom](../Classes/structshapeworks_1_1MultiVariateNormalRandom.md)** 
    * **class [OptimizationVisualizer](../Classes/classshapeworks_1_1OptimizationVisualizer.md)** 
    * **class [Optimize](../Classes/classshapeworks_1_1Optimize.md)** 
    * **class [OptimizeCommandGroup](../Classes/classshapeworks_1_1OptimizeCommandGroup.md)** 
    * **class [OptimizeParameterFile](../Classes/classshapeworks_1_1OptimizeParameterFile.md)** 
    * **class [OptimizeParameters](../Classes/classshapeworks_1_1OptimizeParameters.md)** 
    * **class [OptimizeTool](../Classes/classshapeworks_1_1OptimizeTool.md)** 
    * **class [Parameters](../Classes/classshapeworks_1_1Parameters.md)** <br>Parameter settings. 
    * **class [ParticleShapeStatistics](../Classes/classshapeworks_1_1ParticleShapeStatistics.md)** 
    * **class [ParticleSystem](../Classes/classshapeworks_1_1ParticleSystem.md)** 
    * **class [ParticleSystemCommand](../Classes/classshapeworks_1_1ParticleSystemCommand.md)** 
    * **class [PhysicalRegion](../Classes/classshapeworks_1_1PhysicalRegion.md)** <br>physical bounds of a 3d region of space 
    * **class [Project](../Classes/classshapeworks_1_1Project.md)** <br>Representation of a project. 
    * **class [ProjectUtils](../Classes/classshapeworks_1_1ProjectUtils.md)** 
    * **class [PythonWorker](../Classes/classshapeworks_1_1PythonWorker.md)** 
    * **class [QGroom](../Classes/classshapeworks_1_1QGroom.md)** <br>Qt Wrapper for [Groom](../Classes/classshapeworks_1_1Groom.md). 
    * **class [QMeshWarper](../Classes/classshapeworks_1_1QMeshWarper.md)** <br>Wraps [MeshWarper](../Classes/classshapeworks_1_1MeshWarper.md) as a QObject. 
    * **class [QOptimize](../Classes/classshapeworks_1_1QOptimize.md)** <br>Wraps [Optimize](../Classes/classshapeworks_1_1Optimize.md) as a QObject. 
    * **struct [Reconstruction](../Classes/structshapeworks_1_1Reconstruction.md)** 
    * **class [Sampler](../Classes/classshapeworks_1_1Sampler.md)** 
        * **struct [CuttingPlaneType](../Classes/structshapeworks_1_1Sampler_1_1CuttingPlaneType.md)** 
        * **struct [FFCType](../Classes/structshapeworks_1_1Sampler_1_1FFCType.md)** 
        * **struct [SphereType](../Classes/structshapeworks_1_1Sampler_1_1SphereType.md)** 
    * **class [Session](../Classes/classshapeworks_1_1Session.md)** <br>Representation of a session. 
    * **class [Shape](../Classes/classshapeworks_1_1Shape.md)** <br>Representation of a single shape/patient/subject. 
        * **class [Point](../Classes/classshapeworks_1_1Shape_1_1Point.md)** <br>TODO: replace this wherever it is used. 
    * **class [ShapeEvaluation](../Classes/classshapeworks_1_1ShapeEvaluation.md)** 
    * **class [ShapeEvaluationJob](../Classes/classshapeworks_1_1ShapeEvaluationJob.md)** 
    * **class [ShapeWorksStudioApp](../Classes/classshapeworks_1_1ShapeWorksStudioApp.md)** <br>Main ShapeWorksStudio window. 
    * **class [ShapeworksCommand](../Classes/classshapeworks_1_1ShapeworksCommand.md)** 
    * **class [ShapeworksUtils](../Classes/classshapeworks_1_1ShapeworksUtils.md)** 
    * **class [ShapeworksWorker](../Classes/classshapeworks_1_1ShapeworksWorker.md)** 
    * **struct [SharedCommandData](../Classes/structshapeworks_1_1SharedCommandData.md)** 
    * **class [SplashScreen](../Classes/classshapeworks_1_1SplashScreen.md)** 
    * **class [StatusBarWidget](../Classes/classshapeworks_1_1StatusBarWidget.md)** <br>[StatusBarWidget](). 
    * **class [StringUtils](../Classes/classshapeworks_1_1StringUtils.md)** <br>String utility functions. 
    * **class [StudioInteractorStyle](../Classes/classshapeworks_1_1StudioInteractorStyle.md)** 
    * **class [StudioLog](../Classes/classshapeworks_1_1StudioLog.md)** 
    * **class [StudioMesh](../Classes/classshapeworks_1_1StudioMesh.md)** <br>Representation of a single mesh. 
    * **class [StudioParticles](../Classes/classshapeworks_1_1StudioParticles.md)** <br>Representation of correspondence points for a shape including multiple domains. 
    * **class [StudioUtils](../Classes/classshapeworks_1_1StudioUtils.md)** 
    * **class [StudioVtkOutputWindow](../Classes/classshapeworks_1_1StudioVtkOutputWindow.md)** <br>Implementation of vtkOutputWindow to capture and display VTK error messages. 
    * **class [Style](../Classes/classshapeworks_1_1Style.md)** 
    * **class [Subject](../Classes/classshapeworks_1_1Subject.md)** <br>Representation of a single subject. 
    * **class [TriMeshWrapper](../Classes/classshapeworks_1_1TriMeshWrapper.md)** 
    * **class [Variant](../Classes/classshapeworks_1_1Variant.md)** <br>[Variant]() class to represent multiple types. 
    * **class [VectorImage](../Classes/classshapeworks_1_1VectorImage.md)** <br>[Image](../Classes/classshapeworks_1_1Image.md) composed of vectors instead of just scalars. 
    * **class [Viewer](../Classes/classshapeworks_1_1Viewer.md)** <br>3D [Viewer]()
    * **class [Visualizer](../Classes/classshapeworks_1_1Visualizer.md)** <br>Controls display of objects in viewers. 
    * **class [VtkMeshWrapper](../Classes/classshapeworks_1_1VtkMeshWrapper.md)** 
    * **class [WheelEventForwarder](../Classes/classshapeworks_1_1WheelEventForwarder.md)** 
    * **class [Worker](../Classes/classshapeworks_1_1Worker.md)** 
* **namespace [std](../Namespaces/namespacestd.md)** 
* **namespace [utils](../Namespaces/namespaceutils.md)** 
* **class [vec2d](../Classes/classvec2d.md)** 
* **class [vec3d](../Classes/classvec3d.md)** 
* **class [vec6d](../Classes/classvec6d.md)** 
* **class [vtkPolyDataToImageData](../Classes/classvtkPolyDataToImageData.md)** 
* **namespace [xlnt](../Namespaces/namespacexlnt.md)** 



-------------------------------

Updated on 2022-03-29 at 21:30:18 -0600
